feat: change rsschool link

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ function nicknameGenerator(name){
         <footer>
             <a href="https://github.com/AvlasenkoPetr" target="_blank"><img src="./assets/github.png" alt="github"></a>
             <h5>2021</h5>
-            <a href="https://rs.school/" target="_blank"><img src="./assets/rs_school.svg" alt="rsschool"></a>
+            <a href="https://rs.school/js/" target="_blank"><img src="./assets/rs_school.svg" alt="rsschool"></a>
         </footer>
     </main>
     <script src="./libs/highlight/highlight.min.js"></script>
