--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <section id="education">
                     <h3>Education:</h3>
                         <p>BSUIR, Faculty of Computer Design, Programmable mobile systems</p>
-                        <p>2017-2021, Belarus, Minsk</p> 
+                        <p>2017-2021, Belarus, Minsk [not ended]</p> 
                 </section>
                 <section id="code">
                     <h3>Code example:</h3>
@@ -100,7 +100,7 @@ function nicknameGenerator(name){
                     <div class="projects">
                         <div class="projects-div">
                             <div class="project-cell">  
-                                <p>Museum #stage0</p>  
+                                <p>Museum #stage1</p>  
                                 <a href="https://rolling-scopes-school.github.io/avlasenkopetr-JSFE2021Q3/museum/" target="_blank">
                                     <img src="./assets/museum.jpg" alt="museum">
                                 </a> 
